--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,9 @@
 
 [env:esp32s3box]
 platform = espressif32
-board = esp32s3box
+board = esp32-s3-devkitc-1-n16r8
 framework = arduino
+board_build.partitions = default_16MB.csv
 lib_deps =
     https://github.com/adafruit/Adafruit_ADS1X15.git
     https://github.com/RoboticsBrno/ServoESP32.git#v1.0.3
